added:makefile, dockerfile, docker-compose, CRUDL APIs
